--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "public": {
     "default": {
-      "commerce-core-endpoint": "https://www.aemshop.net/graphql",
-      "commerce-endpoint": "https://catalog-service.adobe.io/graphql",
+      "commerce-core-endpoint": "https://na1-sandbox.api.commerce.adobe.com/8idEEDDiVwjCEJAyB5kjfi/graphql",
+      "commerce-endpoint": "https://na1-sandbox.api.commerce.adobe.com/8idEEDDiVwjCEJAyB5kjfi/graphql",
       "headers": {
         "all": {
           "Store": "default"
@@ -12,18 +12,18 @@
           "Magento-Store-View-Code": "default",
           "Magento-Website-Code": "base",
           "x-api-key": "4dfa19c9fe6f4cccade55cc5b3da94f7",
-          "Magento-Environment-Id": "f38a0de0-764b-41fa-bd2c-5bc2f3c7b39a"
+          "Magento-Environment-Id": "7k8EEaou2ToLpUVmBc8LE7"
         }
       },
       "commerce-assets-enabled": false,
       "analytics": {
         "base-currency-code": "USD",
         "environment": "Production",
-        "environment-id": "f38a0de0-764b-41fa-bd2c-5bc2f3c7b39a",
+        "environment-id": "7k8EEaou2ToLpUVmBc8LE7",
         "store-code": "main_website_store",
         "store-id": "main_website_store",
         "store-name": "Default Store View",
-        "store-url": "https://www.aemshop.net/",
+        "store-url": "https://main--commerce-eds-practice-site-1--mayur434.aem.live",
         "store-view-code": "default",
         "store-view-id": "default",
         "store-view-name": "Default Store View",
@@ -33,7 +33,7 @@
       },
       "plugins": {
         "picker": {
-          "rootCategory": "2"
+          "rootCategory": "1"
         }
       }
     }
