--- a/demo-config-aco.json
+++ b/demo-config-aco.json
@@ -1,8 +1,8 @@
 {
   "public": {
     "default": {
-      "commerce-core-endpoint": "https://na1-sandbox.api.commerce.adobe.com/8idEEDDiVwjCEJAyB5kjfi/graphql",
-      "commerce-endpoint": "https://na1-sandbox.api.commerce.adobe.com/8idEEDDiVwjCEJAyB5kjfi/graphql",
+      "commerce-core-endpoint": "https://na1-sandbox.api.commerce.adobe.com/7k8EEaou2ToLpUVmBc8LE7/graphql",
+      "commerce-endpoint": "https://na1-sandbox.api.commerce.adobe.com/7k8EEaou2ToLpUVmBc8LE7/graphql",
       "headers": {
         "cs": {
           "ac-view-id": "0d3eebf7-b5fb-4904-9ccf-f35fcc61862b",
@@ -11,7 +11,7 @@
         }
       },
       "analytics": {
-        "environment-id": "8idEEDDiVwjCEJAyB5kjfi",
+        "environment-id": "7k8EEaou2ToLpUVmBc8LE7",
         "environment": "Testing",
         "store-url": "https://main--boilerplate-aco--adobe-commerce.aem.live/",
         "base-currency-code": "USD",
